# visionpipe

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.claude/commands/: screenshot.md
.claude/skills/visionpipe-capture/: SKILL.md
crates/visionpipe-core/: Cargo.toml
crates/visionpipe-core/src/: capture.rs  lib.rs  save.rs  window.rs
crates/visionpipe-mcp/: Cargo.toml
crates/visionpipe-mcp/src/: main.rs
crates/vp-cli/: Cargo.toml
crates/vp-cli/src/: main.rs
docs/claude-memory/: MEMORY.md  README.md  release-workflow.md  tauri-gotchas.md
docs/superpowers/plans/: 2026-04-14-credit-system.md  2026-04-15-in-app-purchase-desktop.md  2026-04-15-in-app-purchase-web-api.md  2026-05-02-cloud-share-2a-web.md  2026-05-02-multi-screenshot-narrated-bundle-smoke-tests.md  2026-05-02-multi-screenshot-narrated-bundle.md  2026-05-04-credit-pricing-redesign.md
docs/superpowers/specs/: 2026-04-11-desktop-app-annotation-overlay-design.md  2026-04-15-in-app-credit-purchase-design.md  2026-05-02-cloud-share-secret-link-design.md  2026-05-02-multi-screenshot-narrated-bundle-design.md  2026-05-02-onboarding-and-drag-handle-design.md  2026-05-04-credit-pricing-redesign.md
prd/: PRD-1.0-041126.md  PRD.md  initial-build-out.md
prd/branch commit updates/: app-iteration.md  feature-cloud-share-secret-link.md  feature-credits-rebased.md  feature-multi-screenshot-bundle.md  implement-credit-calculation.md  improve-screenshot-skill.md  initial-build-out.md  main.md  merge-best-of-both.md  spec-2-cloud-share.md
prd/branch commit updates/feature/: multi-screenshot-bundle.md
scripts/: release.sh
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capture.rs  credits.rs  hotkey_config.rs  install_token.rs  lib.rs  main.rs  metadata.rs  permissions.rs  session.rs  speech.rs  speech_bridge.m
src/components/: Footer.tsx  Header.tsx  HistoryHub.tsx  HotkeyBindingRow.tsx  HotkeyPill.tsx  IdleScreen.tsx  InterleavedView.tsx  KeyCaps.tsx  Lightbox.tsx  MicOnboardingModal.tsx  Onboarding.tsx  ReRecordModal.tsx  RecordingControls.tsx  ScreenshotCard.tsx  SelectionOverlay.tsx  SessionWindow.tsx  SettingsPanel.tsx  SplitView.tsx  VersionBadge.tsx
src/components/__tests__/: HotkeyBindingRow.test.tsx  HotkeyPill.test.ts
src/images/: logo-base64.txt
src/lib/: audio-recorder.ts  bundle-name.ts  canonical-name.ts  deepgram-client.ts  install-token.ts  markdown-renderer.ts  permissions-types.ts  ui-tokens.ts
src/lib/__tests__/: bundle-name.test.ts  canonical-name.test.ts  markdown-renderer.test.ts
src/lib/__tests__/__fixtures__/: session-2-screenshots.expected.md  session-2-screenshots.json
src/state/: audio-duration.ts  credit-context.tsx  mic-context.tsx  persistence.ts  recording-context.tsx  session-context.tsx  session-reducer.ts
src/state/__tests__/: audio-duration.test.ts  session-reducer.test.ts
src/types/: session.ts
vp-edge-mock/: README.md  package-lock.json  package.json  server.mjs
