[package]
name = "visionpipe"
version = "0.2.2"
description = "Screenshot to AI in one keystroke"
authors = ["VisionPipe"]
edition = "2021"

[lib]
name = "visionpipe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"

# Audio capture
cpal = "0.15"

# On-device speech-to-text (Whisper via candle)
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
