[package]
name = "visionpipe"
version = "0.10.2"
description = "Screenshot to AI in one keystroke"
authors = ["VisionPipe"]
edition = "2021"

[lib]
name = "visionpipe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
visionpipe-core = { path = "../crates/visionpipe-core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
embed_plist = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libc = "0.2"
chrono = "0.4"
dirs = "5"
keyring = "3"

# Used by the scrolling-screenshot stitcher in capture.rs
image = { version = "0.25", default-features = false, features = ["png"] }

# Audio capture
cpal = "0.15"

# On-device speech-to-text (Whisper via candle)
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
